# FlightsProject

./: CMakeLists.txt  main.c
flights_project/headers/calendar/: calendar.h
flights_project/headers/country/: city.h  country.h  country_array.h
flights_project/headers/flight/: flight.h  flight_list.h
flights_project/headers/manager/: manager.h
flights_project/headers/passenger/: passenger.h
flights_project/src/calendar/: calendar.c
flights_project/src/country/: city.c  country.c  country_array.c
flights_project/src/flight/: flight.c  flight_list.c
flights_project/src/manager/: manager.c
flights_project/src/passenger/: passenger.c
shared/headers/: errors.h
shared/src/: errors.c
